height of sections

--- a/index.html
+++ b/index.html
@@ -97,7 +97,19 @@
   </div>
 </nav>
 
-   
+  <section class="wrapper" id="section">
+    Blah
+  </section>
+  
+    <section class="wrapper" id="section2">
+    Blah
+    </section>
+  
+    <section class="wrapper" id="section3">
+    Blah
+    </section>
+  
+  
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
