search bar look

--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@ You can build your project by forking this CodePen pen. Or you can use this CDN 
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input type="text" class="form-control" type="search" placeholder="Search for..." aria-label="Search">
+      <span class="input-group-btn">
+        <button class="btn btn-light" type="submit">Go!</button>
+      </span>
     </form>
   </div>
 </nav>
