--- a/index.html
+++ b/index.html
@@ -106,16 +106,29 @@ You can build your project by forking this CodePen pen. Or you can use this CDN 
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input type="text" class="form-control" type="search" placeholder="Search for..." aria-label="Search">
-      <span class="input-group-btn">
+       <input type="text" class="form-control" type="search" placeholder="Search for..." aria-label="Search">
+       <span class="input-group-btn">
         <button class="btn btn-light" type="submit">Go!</button>
       </span>
     </form>
   </div>
+
 </nav>
 
+  <section class="navbar2">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Specs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Video</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Gallery</a>
+      </li>
 
-  </div>
+  </section>
+  
+
   
   <section class="wrapper" id="section">
     <div id="header-img">for a video to automatically play
